// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportExportComponentTest render 1`] = `
<React.Fragment>
  <CustomizedActionButton
    iconProps={
      Object {
        "iconName": "Export",
      }
    }
    onClick={[Function]}
  >
    Export result
  </CustomizedActionButton>
  <ExportDialog
    deps={Object {}}
    description=""
    exportResultsType="Assessment"
    fileName=""
    html=""
    isOpen={false}
    onClose={[Function]}
    onDescriptionChange={[Function]}
  />
</React.Fragment>
`;

exports[`ReportExportComponentTest user interactions click export button, then dismiss dialog: dialog should be dismissed 1`] = `
<React.Fragment>
  <CustomizedActionButton
    iconProps={
      Object {
        "iconName": "Export",
      }
    }
    onClick={[Function]}
  >
    Export result
  </CustomizedActionButton>
  <ExportDialog
    deps={Object {}}
    description=""
    exportResultsType="Assessment"
    html="test html"
    isOpen={false}
    onClose={[Function]}
    onDescriptionChange={[Function]}
  />
</React.Fragment>
`;

exports[`ReportExportComponentTest user interactions click export button, then dismiss dialog: dialog should show 1`] = `
<React.Fragment>
  <CustomizedActionButton
    iconProps={
      Object {
        "iconName": "Export",
      }
    }
    onClick={[Function]}
  >
    Export result
  </CustomizedActionButton>
  <ExportDialog
    deps={Object {}}
    description=""
    exportResultsType="Assessment"
    html="test html"
    isOpen={true}
    onClose={[Function]}
    onDescriptionChange={[Function]}
  />
</React.Fragment>
`;

exports[`ReportExportComponentTest user interactions edit text field: user input new discription 1`] = `
<React.Fragment>
  <CustomizedActionButton
    iconProps={
      Object {
        "iconName": "Export",
      }
    }
    onClick={[Function]}
  >
    Export result
  </CustomizedActionButton>
  <ExportDialog
    deps={Object {}}
    description="new discription"
    exportResultsType="Assessment"
    fileName=""
    html=""
    isOpen={false}
    onClose={[Function]}
    onDescriptionChange={[Function]}
  />
</React.Fragment>
`;
